<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP10A_AUTO" Id="{729d6ab1-b23a-46db-9052-883300302c4a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP10A_AUTO
VAR
	OP10A_CYL_IP					: OP10_ORNG_CYL_IP;
	OP10A_CYL_OP					: OP10_ORNG_CYL_OP;
	OP10A_PNP_FB					: OP10_ORING_PNP;



END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[OP10A_PNP_FB(
	AUTO:= MACHINE_AUTO, 
	MANUAL:= MACHINE_MANUAL, 
	ERROR:= MACHINE_ERR, 
	START_ENABLE:= MACHINE_ENABLE, 
	ROBO_MVED_SFE:= , 
	LH_CMR_OK:= , 
	LH_CMR_NOK:= , 
	RH_CMR_OK:= , 
	RH_CMR_NOK:= , 
	ROBO_REACHED:= , 
	CYL_INPUTS:= OP10A_CYL_IP, 
	DELY_TIME:= , 
	O_RING_PLCED=> , 
	RDY_TO_PICK_ORNG=> , 
	LH_REJ_DONE=> , 
	RH_REJ_DONE=> , 
	CYL_OUTPUTS=> OP10A_CYL_OP);

	
// OP10A AUTO LOGIC CYLINDERS MAPPING 

									(*SENSOR_I/P*)
	OP10A_CYL_IP.DEGREE_0				:=I10A_ORING_ROTRY_CYL_O_DEG;
	OP10A_CYL_IP.DEGREE_180				:=I10A_ORING_ROTRY_CYL_180_DEG;
    OP10A_CYL_IP.HORIZ_CYL_SNR1         :=I10A_ORING_HORZ_CYL_REV;
    OP10A_CYL_IP.HORIZ_CYL_SNR2         :=I10A_ORING_HORZ_CYL_FWD;
    OP10A_CYL_IP.LH_O_GRP_SNR1       	:=I10A_ORING_LH_GRPR_CLSE;
    OP10A_CYL_IP.LH_O_GRP_SNR2          :=I10A_ORING_LH_GRPR_OPN;
    OP10A_CYL_IP.LH_O_PUSH_SNR1         :=I10A_ORING_LH_PUSHR_CYL_REV_FWD;
    OP10A_CYL_IP.LH_O_PUSH_SNR2         :=I10A_ORING_LH_PUSHR_CYL_FWD;
    OP10A_CYL_IP.LH_REJ_SNR1            :=I10A_LH_FIRTRE_ORING_REJ_CYL_FWD;
    OP10A_CYL_IP.LH_REJ_SNR2            :=I10A_LH_FIRTRE_ORING_REJ_CYL_REV;
	OP10A_CYL_IP.RH_O_GRP_SNR1			:=;
    OP10A_CYL_IP.RH_O_GRP_SNR2          :=;
    OP10A_CYL_IP.RH_O_PUSH_SNR1         :=;
    OP10A_CYL_IP.RH_O_PUSH_SNR2         :=;
    OP10A_CYL_IP.RH_REJ_SNR1            :=I10A_RH_FIRTRE_ORING_REJ_CYL_FWD;
    OP10A_CYL_IP.RH_REJ_SNR2            :=I10B_LH_FIRTRE_ORING_REJ_CYL_REV;
    OP10A_CYL_IP.VERT_CYL_SNR1          :=I10A_ORING_VERT_CYL_UP;
    OP10A_CYL_IP.VERT_CYL_SNR2          :=I10A_ORING_VERT_CYL_DWN;
	
									(*CYLINDER_AUTO_O/P*)	
	
	OP10A_ALL_CYL_HOME_FB				:=OP10A_CYL_OP.ALL_HOME			;
	OP10A_O_0DEGRE_AUTOCMD1				:=OP10A_CYL_OP.DEGREE_AUT_CMD1	;
	OP10A_O_180DEGRE_AUTOCMD2   		:=OP10A_CYL_OP.DEGREE_AUT_CMD2    ;
	OP10A_O_HORZ_AUTOCMD1    			:=OP10A_CYL_OP.HORIZ_CYL_AUT_CMD1 ;
	OP10A_O_HORZ_AUTOCMD2    			:=OP10A_CYL_OP.HORIZ_CYL_AUT_CMD2 ;
	OP10A_A_O_LHGRIP_ONOFF    			:=OP10A_CYL_OP.LH_O_GRP_VALVE_ON  ;
	OP10A_A_O_LHPUSH_CYL    			:=OP10A_CYL_OP.LH_O_PSH_VALVE_ON  ;
	OP10A_A_LH_REJ_HOME	    			:=OP10A_CYL_OP.LH_REJ_CMD1        ;
	OP10A_A_LH_REJ_WRK	    			:=OP10A_CYL_OP.LH_REJ_CMD2        ;
	OP10A_A_O_RHGRIP_ONOFF    			:=OP10A_CYL_OP.RH_O_GRP_VALVE_ON  ;
	OP10A_A_O_RHPUSH_CYL    			:=OP10A_CYL_OP.RH_O_PSH_VALVE_ON  ;
	OP10A_A_RH_REJ_HOME	    			:=OP10A_CYL_OP.RH_REJ_CMD1        ;
	OP10A_A_RH_REJ_WRK	    			:=OP10A_CYL_OP.RH_REJ_CMD2        ;
	OP10A_O_VERT_AUTOCMD1    			:=OP10A_CYL_OP.VERT_CYL_AUT_CMD1  ;
	OP10A_O_VERT_AUTOCMD2    			:=OP10A_CYL_OP.VERT_CYL_AUT_CMD2  ;

	
	
	
	
	
	
	
	
	
	
	
		]]></ST>
    </Implementation>
    <LineIds Name="OP10A_AUTO">
      <LineId Id="3" Count="70" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>